Re-enabling colour contrast accessibility checks and fixing a couple of failures

--- a/src/elements/govuk/phase-banner/style.scss
+++ b/src/elements/govuk/phase-banner/style.scss
@@ -3,14 +3,14 @@
 
 // Note: The gov uk defined colours are not accessible from a contrast perspective
 // so they have been modified here
-// .phase-banner-alpha {
-//   .phase-tag {
-//     background-color: darken($alpha-colour, 1%);
-//   }
-// }
+.phase-banner-alpha {
+  .phase-tag {
+    background-color: darken($alpha-colour, 1%);
+  }
+}
 
-// .phase-banner-beta {
-//   .phase-tag {
-//     background-color: darken($beta-colour, 17%);
-//   }
-// }
+.phase-banner-beta {
+  .phase-tag {
+    background-color: darken($beta-colour, 17%);
+  }
+}
